--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",    
-      "test": "vitest"    
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
@@ -22,6 +22,7 @@
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "daisyui": "^4.12.13",
     "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
