--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",    
-      "test": "vitest"    
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
