--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",    
-      "test": "vitest"    
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "mapbox-gl": "^3.7.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
