--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "mapbox-gl": "^3.7.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
