--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "axios-mock-adapter": "^2.1.0",
     "daisyui": "^4.12.13",
     "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.0",
